# PrimeClip

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
apps/desktop/scripts/: generate-icon-variants.py
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_info.rs  credentials.rs  icon_shape.rs  main.rs  menu.rs  sidecar.rs  state.rs
apps/desktop/src/components/: ActiveUploadBanner.tsx  ApiStartupBanner.tsx  AppLayout.tsx  ClipCard.tsx  GlobalJobMonitor.tsx  JobProgress.test.tsx  JobProgress.tsx  MenuBridge.tsx  Nav.tsx  Sidebar.tsx  VideoPreview.tsx
apps/desktop/src/hooks/: useJobPolling.ts  useJobStageNotifications.ts  useProviders.ts
backend/: bundle.spec
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py  deps_captions.py
backend/app/db/: models.py  repository.py  session.py
backend/app/infra/: dependencies.py  ffmpeg.py  ffmpeg_process.py  fonts.py  logging_config.py  paths.py  storage.py
backend/app/jobs/: runner.py
backend/app/pipelines/: clip_pipeline.py  context.py
backend/app/prompts/: clip_selection.txt  clip_selection_system.txt
backend/app/providers/: base.py  claude.py  gemini.py  json_utils.py  ollama.py  openai_compat.py  registry.py
backend/app/schemas/: caption.py  clip.py  common.py  crop.py  dependencies.py  face.py  motion.py  provider.py  render.py  scene.py  timeline.py  transcript.py  video.py
backend/app/services/: media_cache.py  thumbnails.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_job_cancel.py  test_pipeline.py
backend/tests/unit/: test_captions.py  test_job_cancel.py  test_json_utils.py  test_media_cache.py  test_paths.py  test_pipeline_job_cancel.py  test_thumbnails.py  test_vertical_crop.py
scripts/: build-full.sh  build-lite.sh  bundle-backend.sh  bundle-ffmpeg.sh  check-deps.sh  init-granular-history.sh
(+60 files in other folders)
