[project]
name = "primeclip"
version = "0.1.0"
description = "Local-first AI-powered video clipping tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.22",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "anthropic>=0.42.0",
    "openai>=1.58.0",
    "json-repair>=0.30.0",
    "faster-whisper>=1.1.0",
    "opencv-python-headless>=4.10.0",
    "mediapipe>=0.10.14",
    "numpy>=1.26.0",
    "aiofiles>=24.1.0",
    "yt-dlp[default]>=2024.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pyinstaller>=6.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"backend/app/services/captions/generator.py" = ["E501"]
"backend/app/services/captions/ass_builder.py" = ["E501"]
